<resources>
    <string name="app_name">Solmar</string>
    <string name="title_app">SOLGIS</string>
    <!-- Activity Login -->
    <string name="txt_bienvenido">Bienvenido a Solgis</string>

    <!-- Activity detection strings -->
    <string name="in_vehicle">VEHICULO</string>
    <string name="on_bicycle">BICICLETA</string>
    <string name="on_foot">CAMINANDOOCORRIENDO</string>
    <string name="running">CORRIENDO</string>
    <string name="still">SINMOVIMIENTO</string>
    <string name="tilting">INCLINACION</string>
    <string name="unknown">ACTIVIDADNODETECTADA</string>
    <string name="walking">CAMINANDO</string>
    <string name="unidentifiable_activity">ACTIVIDAD SIN IDENTIFICAR: %1$d </string>

    <string name="detected_activities_title">ACTIVIDADES DETECTADAS</string>
    <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>

    <string name="title_activity_bienvenido">Bienvenido</string>
    <string name="dummy_button">Actualizar</string>
    <string name="dummy_content">SOLGIS\nBIENVENIDO</string>
    <string name="txt_acceso">SOLGIS\nACCESO BLOQUEADO</string>
    <string name="txt_content_register_number">INGRESE SU NÚMERO</string>

    <string name="title_activity_register_number">RegisterNumber</string>
    <string name="ingrese_n_mero">Ingrese Número</string>
    <string name="btn_login">Entrar</string>
    <string name="txt_codEmpleado">Ingrese código</string>
    <string name="txt_iniciarTurno">INICIAR TURNO</string>
    <string name="descripcion_numero">Registre su número telefónico para poder acceder a la aplicación</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">Abierto</string>
    <string name="close">cerrado</string>
    <string name="txt_aprobacion">Solicitud enviada, a espera de aprobación</string>
    <string name="txt_info">\nTocar pantalla para actualizar</string>
    <string name="txt_numero">\nIngrese Número Telefónico</string>

    <string name="pbbienvenido">Obteniendo Código...</string>
    <string name="pin">PIN</string>

    <string name="scan_barcode">Scan Barcode</string>
    <string name="any_orientation">1D Any Orientation</string>
    <string name="scan_from_fragment">Scan from fragment</string>
    <string name="front_camera">Front Camera</string>
    <string name="custom_activity">Continuous Scan</string>
    <string name="toolbar_activity">Activity with Toolbar</string>
    <string name="custom_scanner">Custom Scanner Activity</string>
    <string name="scanner_with_margin">Scanner with Margin</string>
    <string name="scanner_with_timeout">Finish Scan in 8 Seconds</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="codebar">Codebar</string>

    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="brown">BROWN</string>
    <string name="black">BLACK</string>
    <string name="persona">PERSONA</string>
    <string name="carga">CARGA</string>
    <string name="foto">FOTO</string>

</resources>
