<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.idslatam.solmar.View.Bienvenido">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="@color/black_overlay"
        android:textSize="35sp"
        android:background="@mipmap/bienvenido"
        android:textStyle="bold" />

    <TextView
        android:text="@string/txt_aprobacion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:textSize="18sp"
        android:textColor="@color/lightGray"
        android:id="@+id/text_aprobacion" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="622dp"
        android:layout_marginTop="15dp"
        android:gravity="center|top"
        android:text="@string/txt_info"
        android:textColor="@color/black_overlay"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button"
                android:textColor="@color/black"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
