<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bienvenido"
    android:gravity="center"
    tools:context="com.idslatam.solmar.View.RegisterNumber">


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center|top"
        android:text="@string/txt_iniciarTurno"
        android:textColor="@color/black_overlay"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black_overlay"
        android:layout_below="@+id/txt_title"
        android:layout_marginBottom="50dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/body_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center">


            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:padding="10dp"
                android:hint="@string/txt_codEmpleado"
                android:id="@+id/Ed_codEmpleado"
                android:textColor="@color/black_overlay"
                android:maxLines="1"
                android:gravity="center"
                android:background="@drawable/border_edittext"
                android:textSize="16sp" />

        </LinearLayout>

    <Button
            android:id="@+id/login_button"
            android:textSize="18dp"
            style="?metaButtonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/black_overlay"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/btn_login"
            tools:ignore="SpUsage" />

</RelativeLayout>
