<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.idslatam.solmar.View.RegisterNumber">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:keepScreenOn="true"
            android:text="@string/title_app"
            android:textColor="@color/black_overlay"
            android:textSize="35sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/ingrese_n_mero"
            android:id="@+id/EdFotocheck"
            tools:ignore="ContentDescription,LabelFor"
            tools:text="Ingrese Número"
            android:textColor="@color/black_overlay"
            android:contentDescription=""
            android:maxLines="1"
            android:textAlignment="center" />
    </LinearLayout>
    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_register"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn_sendNumber"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/dummy_button" />
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
